# domain-abuse-toolkit

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  README.md  RUN_TESTS.cmd  SECURITY.md  START_TOOLKIT.cmd  START_TOOLKIT_DOCKER.cmd  START_TOOLKIT_NETWORK.cmd  STOP_TOOLKIT.cmd  STOP_TOOLKIT_DOCKER.cmd  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
docker/app/: Dockerfile
docker/capture/: Dockerfile
docker/gateway/: Dockerfile  nginx.conf
docs/: PRD_v0.2.md  architecture.md  data-model.md  mvp-backlog.md  operator-journey.md  reporting-catalogue.md  security-and-evidence.md  testing-guide.md  ux-guided-workflow.md  ux-ui-doctrine.md
docs/adr/: 0001-container-runtime-and-browser-isolation.md
scripts/: start-toolkit-docker.ps1  start-toolkit.ps1  stop-toolkit-docker.ps1  stop-toolkit.ps1  test-toolkit.ps1
src/domain_abuse_toolkit/: __init__.py  capture_worker.py  config.py  main.py  models.py
src/domain_abuse_toolkit/resources/: reporting_channels.json
src/domain_abuse_toolkit/security/: __init__.py  targets.py
src/domain_abuse_toolkit/services/: cases.py  collection_assessment.py  collection_jobs.py  collectors.py  drafts.py  evidence.py  exports.py  follow_up.py  html_resources.py  i18n.py  monitoring.py  (+6 more)
tests/: test_app.py  test_cases.py  test_collection_assessment.py  test_collectors.py  test_evidence.py  test_exports.py  test_follow_up.py  test_html_resources.py  test_i18n.py  test_rdap_collector.py  test_reporting.py  test_screenshot_collector.py  test_snapshot_comparison.py  test_targets.py  test_web_collector.py
(+18 files in other folders)
