[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "domain-abuse-toolkit"
version = "0.1.0"
description = "Human-in-the-loop domain abuse case management and evidence preparation"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary - license not yet selected" }
authors = [{ name = "Domain Abuse Toolkit contributors" }]
dependencies = [
  "dnspython>=2.8,<3",
  "fastapi>=0.116,<1",
  "httpx>=0.28,<1",
  "jinja2>=3.1,<4",
  "pydantic-settings>=2.10,<3",
  "python-multipart>=0.0.20,<1",
  "tldextract>=5.3,<6",
  "uvicorn[standard]>=0.35,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4,<9",
  "pytest-asyncio>=1.1,<2",
  "ruff>=0.12,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/domain_abuse_toolkit"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
